optimized pagination bar

--- a/src/main/resources/static/css/core.css
+++ b/src/main/resources/static/css/core.css
@@ -393,34 +393,33 @@ ul {
 }
 /* line 397, ../../../scss/core.scss */
 .m-page .m-pagination ul.pagination li a {
-  color: #485563;
-  text-decoration: none;
-}
-/* line 401, ../../../scss/core.scss */
-.m-page .m-pagination ul.pagination li a.current {
   color: #fff;
   text-decoration: underline;
 }
-/* line 412, ../../../scss/core.scss */
+/* line 402, ../../../scss/core.scss */
+.m-page .m-pagination ul.pagination li .current {
+  color: #485563;
+}
+/* line 411, ../../../scss/core.scss */
 .m-page .m-supplier .m-supplier-items-wrapper {
   box-sizing: border-box;
   background-color: #485563;
   padding: 10px;
 }
-/* line 417, ../../../scss/core.scss */
+/* line 416, ../../../scss/core.scss */
 .m-page .m-supplier .m-supplier-items-wrapper .m-supplier-item {
   margin-bottom: 10px;
 }
-/* line 420, ../../../scss/core.scss */
+/* line 419, ../../../scss/core.scss */
 .m-page .m-supplier .m-supplier-items-wrapper .m-supplier-item:last-child {
   margin-bottom: 0px;
 }
-/* line 424, ../../../scss/core.scss */
+/* line 423, ../../../scss/core.scss */
 .m-page .m-supplier .m-supplier-items-wrapper .m-supplier-item a.m-supplier-bookable {
   color: #fff;
 }
 
-/* line 432, ../../../scss/core.scss */
+/* line 431, ../../../scss/core.scss */
 .clearfix {
   clear: both;
 }
