--- a/src/main/resources/static/css/core.css
+++ b/src/main/resources/static/css/core.css
@@ -18,7 +18,7 @@ body {
 ul {
   margin: 0;
   padding: 0;
-  list-style: none;
+  list-style-type: none;
 }
 
 /* line 21, ../../../scss/core.scss */
@@ -362,64 +362,129 @@ ul {
   display: inline-block;
   width: 100%;
 }
-/* line 366, ../../../scss/core.scss */
-.m-page .m-my-bookable .m-my-bookable-items ul li .m-item div {
+/* line 365, ../../../scss/core.scss */
+.m-page .m-my-bookable .m-my-bookable-items ul li .m-item {
+  display: inline-block;
+  width: 100%;
+}
+/* line 370, ../../../scss/core.scss */
+.m-page .m-my-bookable .m-my-bookable-items ul li .m-item.header div {
   float: left;
   padding: 10px;
   box-sizing: border-box;
 }
-/* line 371, ../../../scss/core.scss */
+/* line 376, ../../../scss/core.scss */
+.m-page .m-my-bookable .m-my-bookable-items ul li .m-item .cell {
+  float: left;
+  padding: 10px;
+  box-sizing: border-box;
+}
+/* line 382, ../../../scss/core.scss */
 .m-page .m-my-bookable .m-my-bookable-items ul li .m-item .name {
   width: 50%;
+  position: relative;
 }
-/* line 375, ../../../scss/core.scss */
+/* line 386, ../../../scss/core.scss */
+.m-page .m-my-bookable .m-my-bookable-items ul li .m-item .name .icon {
+  width: 16px;
+  height: 16px;
+  margin-bottom: 5px;
+  background-image: url("/images/edit.png");
+  position: absolute;
+  right: 0;
+  top: 12px;
+}
+/* line 395, ../../../scss/core.scss */
+.m-page .m-my-bookable .m-my-bookable-items ul li .m-item .name .icon:hover {
+  cursor: pointer;
+}
+/* line 400, ../../../scss/core.scss */
+.m-page .m-my-bookable .m-my-bookable-items ul li .m-item .name .edit {
+  position: absolute;
+  right: 0;
+  top: 26px;
+  text-align: center;
+  padding-top: 10px;
+  font-size: 12px;
+  box-sizing: border-box;
+  border: solid 1px transparent;
+}
+/* line 411, ../../../scss/core.scss */
+.m-page .m-my-bookable .m-my-bookable-items ul li .m-item .name .edit.enable {
+  background-color: #5cb85c;
+  border: solid 1px #fff;
+  padding-bottom: 10px;
+  z-index: 99;
+}
+/* line 417, ../../../scss/core.scss */
+.m-page .m-my-bookable .m-my-bookable-items ul li .m-item .name .edit.enable ul {
+  display: block;
+}
+/* line 422, ../../../scss/core.scss */
+.m-page .m-my-bookable .m-my-bookable-items ul li .m-item .name .edit ul {
+  display: none;
+}
+/* line 425, ../../../scss/core.scss */
+.m-page .m-my-bookable .m-my-bookable-items ul li .m-item .name .edit ul li {
+  margin-bottom: 5px;
+}
+/* line 428, ../../../scss/core.scss */
+.m-page .m-my-bookable .m-my-bookable-items ul li .m-item .name .edit ul li:last-child {
+  margin-bottom: 0px;
+}
+/* line 432, ../../../scss/core.scss */
+.m-page .m-my-bookable .m-my-bookable-items ul li .m-item .name .edit ul li a {
+  color: #fff;
+  padding: 4px 8px;
+}
+/* line 441, ../../../scss/core.scss */
 .m-page .m-my-bookable .m-my-bookable-items ul li .m-item .last-modified {
   width: 50%;
 }
-/* line 384, ../../../scss/core.scss */
+/* line 450, ../../../scss/core.scss */
 .m-page .m-pagination {
   padding: 10px;
   background-color: #5bc0de;
   margin-bottom: 10px;
 }
-/* line 389, ../../../scss/core.scss */
+/* line 455, ../../../scss/core.scss */
 .m-page .m-pagination ul {
   display: inline-block;
 }
-/* line 393, ../../../scss/core.scss */
+/* line 459, ../../../scss/core.scss */
 .m-page .m-pagination ul.pagination li {
   float: left;
   margin-right: 6px;
 }
-/* line 397, ../../../scss/core.scss */
+/* line 463, ../../../scss/core.scss */
 .m-page .m-pagination ul.pagination li a {
   color: #fff;
   text-decoration: underline;
 }
-/* line 402, ../../../scss/core.scss */
+/* line 468, ../../../scss/core.scss */
 .m-page .m-pagination ul.pagination li .current {
   color: #485563;
 }
-/* line 411, ../../../scss/core.scss */
+/* line 477, ../../../scss/core.scss */
 .m-page .m-supplier .m-supplier-items-wrapper {
   box-sizing: border-box;
   background-color: #485563;
   padding: 10px;
 }
-/* line 416, ../../../scss/core.scss */
+/* line 482, ../../../scss/core.scss */
 .m-page .m-supplier .m-supplier-items-wrapper .m-supplier-item {
   margin-bottom: 10px;
 }
-/* line 419, ../../../scss/core.scss */
+/* line 485, ../../../scss/core.scss */
 .m-page .m-supplier .m-supplier-items-wrapper .m-supplier-item:last-child {
   margin-bottom: 0px;
 }
-/* line 423, ../../../scss/core.scss */
+/* line 489, ../../../scss/core.scss */
 .m-page .m-supplier .m-supplier-items-wrapper .m-supplier-item a.m-supplier-bookable {
   color: #fff;
 }
 
-/* line 431, ../../../scss/core.scss */
+/* line 497, ../../../scss/core.scss */
 .clearfix {
   clear: both;
 }
