--- a/src/main/resources/static/css/core.css
+++ b/src/main/resources/static/css/core.css
@@ -536,4 +536,94 @@ ul {
   content: '-';
 }
 
+/* line 3, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-search {
+  padding: 16px 10px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+  background-color: #485563;
+}
+/* line 9, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-search label {
+  line-height: 32px;
+  font-weight: 300;
+  margin-right: 8px;
+}
+/* line 15, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-search .datetimepicker {
+  padding: 4px;
+  direction: ltr;
+  color: #2b3e50;
+  height: 32px;
+  width: 160px;
+  border: solid 1px transparent;
+  margin-right: 20px;
+  outline: none;
+  font-size: 14px;
+}
+/* line 27, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-search #search-bookable-status {
+  color: #ffffff;
+  background-color: #5bc0de;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  border: 1px solid transparent;
+  white-space: nowrap;
+  padding: 4px 16px;
+  font-size: 15px;
+  line-height: 1.42857143;
+  border-radius: 0;
+  width: 80px;
+  outline: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+/* line 46, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-search #search-bookable-status:hover {
+  background-color: #5bc0ff;
+}
+/* line 53, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-items-wrapper .header {
+  width: 100%;
+  padding: 4px 6px;
+  background-color: #fff;
+  color: #333;
+}
+/* line 60, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-items-wrapper .row {
+  padding: 4px 6px;
+  width: 100%;
+  background-color: #485563;
+}
+/* line 66, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-items-wrapper .name {
+  width: 50%;
+  float: left;
+}
+/* line 71, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-items-wrapper .holders {
+  width: 50%;
+  float: left;
+}
+/* line 75, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-items-wrapper .holders .m-holder {
+  display: inline-block;
+  width: 100%;
+}
+/* line 79, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-items-wrapper .holders .m-holder div {
+  float: left;
+}
+/* line 83, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-items-wrapper .holders .m-holder .holder-name {
+  width: 50%;
+}
+/* line 87, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-items-wrapper .holders .m-holder .bookedfor {
+  width: 50%;
+}
+
 /*# sourceMappingURL=core.css.map */
