--- a/src/main/resources/static/css/core.css
+++ b/src/main/resources/static/css/core.css
@@ -537,20 +537,65 @@ ul {
 }
 
 /* line 3, ../../../scss/_modules/_m-my-bookable-status.scss */
-.m-bookable-status .m-bookable-status-search {
+.m-bookable-status .m-bookable-status-items-wrapper .header {
+  width: 100%;
+  padding: 6px 10px;
+  background-color: #fff;
+  color: #333;
+}
+/* line 11, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-items-wrapper .m-bookable-item-status .row {
+  padding: 6px 10px 0px;
+  width: 100%;
+  background-color: #485563;
+}
+/* line 18, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-items-wrapper .m-bookable-item-status:last-child .row {
+  padding-bottom: 6px;
+}
+/* line 24, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-items-wrapper .name {
+  width: 40%;
+  float: left;
+}
+/* line 29, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-items-wrapper .holders {
+  width: 60%;
+  float: left;
+}
+/* line 33, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-items-wrapper .holders .m-holder {
+  display: inline-block;
+  width: 100%;
+}
+/* line 37, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-items-wrapper .holders .m-holder div {
+  float: left;
+}
+/* line 41, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-items-wrapper .holders .m-holder .holder-name {
+  width: 50%;
+}
+/* line 45, ../../../scss/_modules/_m-my-bookable-status.scss */
+.m-bookable-status .m-bookable-status-items-wrapper .holders .m-holder .bookedfor {
+  width: 50%;
+}
+
+/* line 1, ../../../scss/_modules/_m-start-end-date-search.scss */
+.m-start-end-date-search {
   padding: 16px 10px;
   margin-bottom: 10px;
   box-sizing: border-box;
   background-color: #485563;
 }
-/* line 9, ../../../scss/_modules/_m-my-bookable-status.scss */
-.m-bookable-status .m-bookable-status-search label {
+/* line 7, ../../../scss/_modules/_m-start-end-date-search.scss */
+.m-start-end-date-search label {
   line-height: 32px;
   font-weight: 300;
   margin-right: 8px;
 }
-/* line 15, ../../../scss/_modules/_m-my-bookable-status.scss */
-.m-bookable-status .m-bookable-status-search .datetimepicker {
+/* line 13, ../../../scss/_modules/_m-start-end-date-search.scss */
+.m-start-end-date-search .datetimepicker {
   padding: 4px;
   direction: ltr;
   color: #2b3e50;
@@ -561,8 +606,8 @@ ul {
   outline: none;
   font-size: 14px;
 }
-/* line 27, ../../../scss/_modules/_m-my-bookable-status.scss */
-.m-bookable-status .m-bookable-status-search #search-bookable-status {
+/* line 25, ../../../scss/_modules/_m-start-end-date-search.scss */
+.m-start-end-date-search .search-button {
   color: #ffffff;
   background-color: #5bc0de;
   text-align: center;
@@ -579,51 +624,12 @@ ul {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
+  -o-user-select: none;
   user-select: none;
 }
-/* line 46, ../../../scss/_modules/_m-my-bookable-status.scss */
-.m-bookable-status .m-bookable-status-search #search-bookable-status:hover {
+/* line 45, ../../../scss/_modules/_m-start-end-date-search.scss */
+.m-start-end-date-search .search-button:hover {
   background-color: #5bc0ff;
-}
-/* line 53, ../../../scss/_modules/_m-my-bookable-status.scss */
-.m-bookable-status .m-bookable-status-items-wrapper .header {
-  width: 100%;
-  padding: 4px 6px;
-  background-color: #fff;
-  color: #333;
-}
-/* line 60, ../../../scss/_modules/_m-my-bookable-status.scss */
-.m-bookable-status .m-bookable-status-items-wrapper .row {
-  padding: 4px 6px;
-  width: 100%;
-  background-color: #485563;
-}
-/* line 66, ../../../scss/_modules/_m-my-bookable-status.scss */
-.m-bookable-status .m-bookable-status-items-wrapper .name {
-  width: 50%;
-  float: left;
-}
-/* line 71, ../../../scss/_modules/_m-my-bookable-status.scss */
-.m-bookable-status .m-bookable-status-items-wrapper .holders {
-  width: 50%;
-  float: left;
-}
-/* line 75, ../../../scss/_modules/_m-my-bookable-status.scss */
-.m-bookable-status .m-bookable-status-items-wrapper .holders .m-holder {
-  display: inline-block;
-  width: 100%;
-}
-/* line 79, ../../../scss/_modules/_m-my-bookable-status.scss */
-.m-bookable-status .m-bookable-status-items-wrapper .holders .m-holder div {
-  float: left;
-}
-/* line 83, ../../../scss/_modules/_m-my-bookable-status.scss */
-.m-bookable-status .m-bookable-status-items-wrapper .holders .m-holder .holder-name {
-  width: 50%;
-}
-/* line 87, ../../../scss/_modules/_m-my-bookable-status.scss */
-.m-bookable-status .m-bookable-status-items-wrapper .holders .m-holder .bookedfor {
-  width: 50%;
 }
 
 /*# sourceMappingURL=core.css.map */
